...
import ch.epfllife.utils.SystemToastHelper
import ch.epfllife.utils.ToastHelper

object SignInScreenTestTags {
  const val SIGN_IN_APP_LOGO = "signInAppLogo"
  const val SIGN_IN_TITLE = "signInTitle"
  const val SIGN_IN_BUTTON = "signInButton"
  const val GOOGLE_LOGO = "googleLogo"
}

@Composable
fun SignInScreen(
    auth: Auth,
...
